test-files/cmd/quick/BadJavaScriptTranslation.sh.stdout
14:34:53.187 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
14:34:53.193 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Loading maps: ...les/jakarta_raya_coastline.shp...
14:34:53.195 INFO   ...JavaScriptSchemaTranslator.cpp( 215) Loading translation script: test-files/cmd/quick/tSimple.js...
Initialize works!
14:34:53.217 ERROR  ...JavaScriptSchemaTranslator.cpp( 309) Error initializing JavaScript: Function call 'initialize' returned an error.
14:34:53.217 INFO   ...ema/PythonSchemaTranslator.cpp( 101) Using translation script: test-files/cmd/quick/tSimple.js
14:34:53.795 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
14:34:53.802 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Loading maps: ...les/jakarta_raya_coastline.shp...
14:34:53.804 INFO   ...JavaScriptSchemaTranslator.cpp( 215) Loading translation script: translations/BadSyntaxTest.js...
14:34:53.825 ERROR  ...JavaScriptSchemaTranslator.cpp( 309) Error initializing JavaScript: translations/BadSyntaxTest.js (4) 
foo is bad.
    ^^ 
SyntaxError: Unexpected identifier
14:34:53.825 INFO   ...ema/PythonSchemaTranslator.cpp( 101) Using translation script: translations/BadSyntaxTest.js
14:34:54.348 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Converting ...les/jakarta_raya_coastline.shp to ...k/BadJavaScriptTranslation.osm...
14:34:54.353 STATUS ...pp/hoot/core/util/Progress.cpp(  86) Convert (0%): Loading maps: ...les/jakarta_raya_coastline.shp...
14:34:54.356 INFO   ...JavaScriptSchemaTranslator.cpp( 215) Loading translation script: test-files/cmd/quick/BadRequire.js...
14:34:54.377 ERROR  ...JavaScriptSchemaTranslator.cpp( 309) Error initializing JavaScript: Expected a string. Got an empty value.
14:34:54.377 INFO   ...ema/PythonSchemaTranslator.cpp( 101) Using translation script: test-files/cmd/quick/BadRequire.js
